tests/neg/i14432a.check
-- Error: tests/neg/i14432a.scala:14:43 --------------------------------------------------------------------------------
14 |  val mFoo = summon[Mirror.Of[example.Foo]] // error: no mirror found
   |                                           ^
   |no given instance of type deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef
